# Professional-skills

./: CMakeLists.txt  README.md  gs.cpp  test.cpp
.github/workflows/: CI.yml
googlettest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
googlettest/docs/: primer.md
googlettest/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
googlettest/googletest/cmake/: internal_utils.cmake
googlettest/googletest/src/: gtest.cc
